# AoC-2025

./: .gitignore  Cargo.toml
src/: coordinate.rs  main.rs  many_to_many.rs
src/solutions/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  mod.rs  solver.rs  template.rs
