[package]
name = "aoc-2024"
version = "0.1.0"
authors = ["victor"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
queues = "1.1.0"
reqwest = { version = "0.12.24", features = ["json"]}
tokio = { version = "1", features = ["full"] }
clap = { version = "4.0.29", features = ["derive"]}
chrono = "0.4"
dotenv = "0.15.0"
itertools = "0.14.0"
ndarray = "0.17.1"
regex = "1.7.0"
lazy_static = "1.4.0"
pathfinding = "4.14.0"
slab_tree = "0.3.2"
num-bigint = "0.4.3"
slotmap = "1.0"
num = "0.4.1"
auto_ops = "0.3.0"
priority-queue = "2.1.1"
